@@ -21,6 +21,7 @@ next version - not released yet
     - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
 * Updated Catalan, Finnish, Japanese, Korean, Russian and Spanish translations
 ! EVR-CP/Sync renderers could produce wrong colors
+! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
 ! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
 ! Ticket #5183, Fix a rare crash when processing after playback event
 ! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
